read from Backand!!

--- a/reverso/WebContent/index.html
+++ b/reverso/WebContent/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="reverso">
 <head>
     <meta charset="UTF-8">
     <title>{{'Palindrome Forge'}} </title>
@@ -15,10 +15,10 @@
 </div>
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular/angular-route.js"></script>
+<script src="//cdn.backand.net/backand/dist/1.8.2/backand.min.js"></script>
 <!--<script src="lib/angular-bootstrap/ui-bootstrap.js"></script>-->
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/rzslider/rzslider.js"></script>
- <script src="//cdn.backand.net/backand/dist/1.8.2/backand.min.js"></script>
 <script src="components/palindrome/palindrome.js"></script>
 <script src="application.js"></script>
 </body>
